--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <script src="./resources/qgis2web.js"></script>
         <script src="https://geoservicos.ibge.gov.br/geoserver/ows?service=wfs&version=1.3.0&request=GetCapabilities?SERVICE=WFS&VERSION=1.0.0&REQUEST=GetFeature&TYPENAME=CGEO:UF_2013&SRSNAME=EPSG:4674&outputFormat=text%2Fjavascript&format_options=callback%3AgetEstadosBrasil_4Json"></script>
     </body>
-</html>
 
-SINISTROS COM CICLISTAS EM RODOVIAS FEDERAIS DO ESTADO DO PARANÁ (2021)
-FONTE: PRF
+
+<SINISTROS COM CICLISTAS EM RODOVIAS FEDERAIS DO ESTADO DO PARANÁ (2021)>
+<FONTE: PRF>
 
